Bug 1814345 - Make the style setter re-normalize color value when setting `<font color="...">` r=m_kato

Gmail sets `styleWithCSS` to `true` before setting `foreColor`, then, sets
`styleWithCSS` to `false` before user typing text.  Currently, we normalize
given color value to a proper value for current styling mode, and we have not
assumed that the mode is changed during preserving the style.

For solving this issue, `HTMLEditor::AutoInlineStyleSetter::ApplyStyle` should
normalize the given value again if the value is not proper for
`<font color="...">` (at this moment, the color value is normalized to `#XXXXXX`
style or `rgb(n, n, n)` or `rgba(n, n, n, n)`, therefore the check is simple in
this patch).

Then, I realized that according to `editing/run/forecolor.html` result [1],
the other browsers accept CSS color value as the parameter of `foreColor`
command.  Therefore, this patch also allows it, thus, this patch fixes a lot of
WPT failures.

1. https://wpt.fyi/results/editing/run/forecolor.html%3F1-1000?sha=95f9b15d9a&label=master&max-count=1&view=subtest

Depends on D168179

Differential Revision: https://phabricator.services.mozilla.com/D168639